--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "cSpell.words": ["todos", "Usecase", "flowbite"]
+  "cSpell.words": ["todos", "Usecase", "flowbite"],
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "[svelte]": { "editor.defaultFormatter": "svelte.svelte-vscode" }
 }
