--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@
 version: 2
 updates:
   - package-ecosystem: "gomod"
-    directory: "/backend"
+    directory: "/api"
     schedule:
       interval: "daily"
   - package-ecosystem: "npm"
